@@ -1,12 +1,9 @@
 <?php 
-#heading
 $this->title = Yii::t('UserModule.user','Composing new message');
-#breadcrumbs
 $this->breadcrumbs = array(
 	Yii::t('UserModule.user', 'Messages') => array('index'),
 	Yii::t('UserModule.user', 'Compose new message'),
 );
-#menu
 $this->menu = array(YumMenuItemHelper::backToInbox());
 ?>
 
@@ -21,18 +18,21 @@ $this->menu = array(YumMenuItemHelper::backToInbox());
 
 	<?php echo $form->errorSummary($model); ?>
 
-	<?php echo CHtml::activeHiddenField($model,'from_user_id',array('value' => Yii::app()->user->id)); ?>
+	<?php echo CHtml::activeHiddenField($model,
+			'from_user_id', array(
+				'value' => Yii::app()->user->id)); ?>
 
 	<div class="row">
 		<p> <?php echo Yii::t('UserModule.user', 
 		'Select multiple recipients by holding the CTRL key'); ?> </p>
 
 <?php 
-		echo CHtml::ListBox('SendTo', isset($_GET['to_user_id'])?$_GET['to_user_id']:"", CHtml::listData( 
-		YumUser::model()->active()->findAll(), 'id', 'username'),
-			array('multiple' => 'multiple'));
-		?>
-		<?php echo $form->error($model,'to_user_id'); ?>
+echo CHtml::ListBox('YumMessages[to_user_id]',
+		isset($_GET['to_user_id']) ? $_GET['to_user_id'] :'', CHtml::listData( 
+			YumUser::model()->active()->findAll(), 'id', 'username'),
+		array('multiple' => 'multiple', 'style' => 'width:300px; height:200px;'));
+?>
+<?php echo $form->error($model,'to_user_id'); ?>
 	</div>
 
 	<div class="row">
